maze.lessons.maze.randommouse.RandomMouseMaze.scala.code
override def run() {
   
  while(estSurBiscuit){
    random3()
  }
    prendBiscuit()
}// Your code here 
}
